--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     
     <header class="header" id="header">
         <ol class="nav-bar">
-            <li class="nav-item"><a href="#"></a></li>
-            <li class="nav-item"><a href="#"></a></li>
-            <li class="nav-item"><a href="#"></a></li>
-            <li class="nav-item"><a href="#"></a></li>
-            <li class="nav-item"><a href="#"></a></li>
+            <li class="nav-item"><a href="#">Home</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+            <li class="nav-item"><a href="#">More</a></li>
+            <li class="nav-item"><a href="#">Shop</a></li>
         </ol>
     </header>
     <main class="main" id="main">
