--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </main>
     <footer class="footer" id="footer">
         <ol class="footer-list">
-            <li class="footer-item"><a href="#"></a></li>
-            <li class="footer-item"><a href="#"></a></li>
-            <li class="footer-item"><a href="#"></a></li>
-            <li class="footer-item"><a href="#"></a></li>
-            <li class="footer-item"><a href="#"></a></li>
+            <li class="footer-item">1<a href="#"></a></li>
+            <li class="footer-item">2<a href="#"></a></li>
+            <li class="footer-item">3<a href="#"></a></li>
+            <li class="footer-item">4<a href="#"></a></li>
+            <li class="footer-item">5<a href="#"></a></li>
         </ol>
     </footer>
 
