--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
         </ol>
     </header>
     <main class="main" id="main">
-        <section class="section section1"></section>
+        <section class="section section1">
+            <div class="modal">
+                <div class="modal-item modal-item-red"></div>
+                <div class="modal-item modal-item-blue"></div>
+                <div class="modal-item modal-item-green"></div>
+                <div class="modal-btn modal-left">L</div>
+                <div class="modal-btn modal-right">R</div>
+            </div>
+        </section>
         <section class="section section2"></section>
         <section class="section section3"></section>
     </main>
     <footer class="footer" id="footer">
         <ol class="footer-list">
-            <li class="footer-item">1<a href="#"></a></li>
-            <li class="footer-item">2<a href="#"></a></li>
-            <li class="footer-item">3<a href="#"></a></li>
-            <li class="footer-item">4<a href="#"></a></li>
-            <li class="footer-item">5<a href="#"></a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
         </ol>
     </footer>
 
