edited naming of modal to carousel

--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
     </header>
     <main class="main" id="main">
         <section class="section section1">
-            <div class="modal">
-                <div class="modal-item modal-item-red"></div>
-                <div class="modal-item modal-item-blue"></div>
-                <div class="modal-item modal-item-green"></div>
-                <div class="modal-btn modal-left">L</div>
-                <div class="modal-btn modal-right">R</div>
+            <div class="carousel">
+                <div class="carousel-item carousel-item-red"></div>
+                <div class="carousel-item carousel-item-blue"></div>
+                <div class="carousel-item carousel-item-green"></div>
+                <div class="carousel-btn carousel-left">L</div>
+                <div class="carousel-btn carousel-right">R</div>
             </div>
         </section>
-        <section class="section section2"></section>
+        <section class="section section2">
+            <div class="shape1"></div>
+            <div class="shape2"></div>
+            <div class="shape3"></div>
+            <div class="shape4"></div>
+        </section>
         <section class="section section3"></section>
     </main>
     <footer class="footer" id="footer">
