--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <section class="section section2">
             <div class="shape3"><div class="tri"></div></div>
             <div class="shape4"></div>
+            <div class="shape5"></div>
             <div class="shape1"></div>
             <div class="shape2"></div>
         </section>
