added another shape

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="shape3"><div class="tri"></div></div>
             <div class="shape4"></div>
             <div class="shape5"></div>
+            <div class="shape6"></div>
             <div class="shape1"></div>
             <div class="shape2"></div>
         </section>
