added to the footer

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
             <li class="footer-item"><a href="#">a</a></li>
             <li class="footer-item"><a href="#">a</a></li>
         </ol>
+        <ol class="footer-list">
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+        </ol>
+        <ol class="footer-list">
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+        </ol>
+        <ol class="footer-list">
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+            <li class="footer-item"><a href="#">a</a></li>
+        </ol>
     </footer>
 
     <script src="script.js"></script>
