--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </section>
         <section class="section section2">
             <div class="shape3"><div class="tri"></div></div>
+            <div class="shape7"><div class="hole"></div></div>
             <div class="shape4"></div>
             <div class="shape5"></div>
             <div class="shape6"></div>
